--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ logging.level.com.wsaults=DEBUG
 logging.level.org.springframework.data=TRACE
 logging.level.reactor.core=TRACE
 logging.level.reactor.util=TRACE
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=gender-vote-mongo
+security.basic.enabled=false
+management.security.enabled=false
