--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -5,5 +5,6 @@ logging.level.reactor.util=TRACE
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=gender-vote-mongo
+spring.datasource.*
 security.basic.enabled=false
 management.security.enabled=false
