--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,11 @@ logging.level.com.wsaults=DEBUG
 logging.level.org.springframework.data=TRACE
 logging.level.reactor.core=TRACE
 logging.level.reactor.util=TRACE
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=gender-vote-mongo
+
+# spring.data.mongodb.database=test
+# spring.data.mongodb.host=localhost
+# spring.data.mongodb.port=27017
+
 security.basic.enabled=false
 management.security.enabled=false
+endpoints.health.sensitive=false
